force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Shop_Manager__c/Plant_Shop_Manager__c.object-meta.xml
<CustomObject>
    <description>Saves the valid values for shop manager view on a given plant.</description>
    <label>Plant Shop Manager</label>
    <nameField>
        <displayFormat>PSM-{0000}</displayFormat>
        <label>Plant Shop Manager Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plant Shop Managers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>