force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Shop_Manager__c/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <label>Plant</label>
    <referenceTo>Plant__c</referenceTo>
    <relationshipLabel>Plant Shop Managers</relationshipLabel>
    <relationshipName>Plant_Shop_Managers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>