force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Shop_Manager__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Base_Supp</valueSetName>
    </valueSet>
</CustomField>